fix spacing on project page nav, add faint background to project logo with border radius

--- a/src/pallets/static/style.css
+++ b/src/pallets/static/style.css
@@ -1,6 +1,6 @@
 header {
   border-bottom: 1px solid var(--pico-muted-border-color);
-  margin-bottom: 1.8rem;
+  margin-bottom: 2.25rem;
 }
 
 header nav a {
@@ -92,9 +92,20 @@ main {
   }
 }
 
+.project-logo {
+  display: flex;
+  justify-content: center;
+}
+
+.project-logo div {
+  padding: 1rem;
+  border-radius: 0.8rem;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 footer {
   border-top: 1px solid var(--pico-muted-border-color);
-  margin-top: 1.8rem;
+  margin-top: 3.25rem;
   font-size: 0.75rem;
   align-items: start;
 }
